--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,9 @@ inputs:
   folders_to_copy:
     description: Folders to copy from source to destination
     required: false
+  github:
+    description: Github Context
+    required: true    
 runs:
   using: 'docker'
   image: './dockerfile'
