--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           source_branch: mainline
           destination_branch: mainline
           folders_to_copy: folder1 folder2
-          github: ${{ github }}
+          github_context: ${{ github }}
