--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           source_branch: mainline
           destination_branch: mainline
           folders_to_copy: folder1 folder2
-          github: ${{ toJSON(github) }}
+          github_after: ${{ github.event.after }}
+          github_before: ${{ github.event.before }}
