--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,4 @@ jobs:
           destination_branch: mainline
           folders_to_copy: folder1 folder2
           github_after: ${{ github.event.after }}
+          github_after: ${{ github.event.before }}
